--- a/dein.toml
+++ b/dein.toml
@@ -18,3 +18,17 @@ depends = 'neomru.vim'
 
 [[plugins]]
 repo = 'critiqjo/lldb.nvim'
+hook_add = '''
+    nmap <M-b> <Plug>LLBreakSwitch
+    vmap <F2> <Plug>LLStdInSelected
+    nnoremap <F4> :LLstdin<CR>
+    nnoremap <F5> :LLmode debug<CR>
+    nnoremap <S-F5> :LLmode code<CR>
+    nnoremap <F8> :LL continue<CR>
+    nnoremap <S-F8> :LL process interrupt<CR>
+    nnoremap <F9> :LL print <C-R>=expand('<cword>')<CR>
+    vnoremap <F9> :<C-U>LL print <C-R>=lldb#util#get_selection()<CR><CR>
+'''
+
+[[plugins]]
+repo = 'tomasr/molokai'
