--- a/dein.toml
+++ b/dein.toml
@@ -5,12 +5,12 @@ repo = 'Shougo/dein.vim'
 repo = 'Shougo/vimproc.vim'
 build = 'make'
 
-# [[plugins]]
-# repo = 'Shougo/deoplete.nvim'
-# hook_add = '''
-# let g:python3_host_prog = '/Library/Frameworks/Python.framework/Versions/3.6/bin/python3'
-# let g:deoplete#enable_at_startup = 1
-# '''
+[[plugins]]
+repo = 'Shougo/deoplete.nvim'
+hook_add = '''
+let g:deoplete#enable_at_startup = 1
+'''
+#let g:python3_host_prog = '/Library/Frameworks/Python.framework/Versions/3.6/bin/python3'
 
 # [[plugins]]
 # repo = 'zchee/deoplete-clang'
@@ -27,11 +27,15 @@ build = 'make'
 # [[plugins]]
 # repo = 'tweekmonster/deoplete-clang2'
 
+# [[plugins]]
+# repo = 'Shougo/neomru.nvim'
+
 [[plugins]]
 repo = 'Shougo/denite.nvim'
 depends = 'neomru.vim'
 on_event = 'BufRead'
 hook_add = '''
+let g:python3_host_prog = expand('~/.pyenv/versions/3.5.2/bin/python')
 nmap <silent> <C-u><C-t> :<C-u>Denite filetype<CR>
 nmap <silent> <C-p> :<C-u>Denite file_rec<CR>
 nmap <silent> <C-u>b :<C-u>Denite buffer<CR>
@@ -62,12 +66,12 @@ call denite#custom#var('grep', 'recursive_opts', [])
 repo = 'tomasr/molokai'
 hook_add = '''
 autocmd ColorScheme * highlight Comment ctermfg=40 guifg=#008800
-colorscheme molokai
-syntax on
 " 256色
 set t_Co=256
 " 背景色
 set background=dark
+colorscheme molokai
+syntax on
 '''
 
 [[plugins]]
@@ -103,6 +107,9 @@ repo = 'vim-airline/vim-airline-themes'
 
 [[plugins]]
 repo = 'scrooloose/nerdtree'
+hook_add = '''
+map <C-n> :NERDTreeToggle<CR>
+'''
 
 [[plugins]]
 repo = 'tpope/vim-surround'
@@ -115,4 +122,16 @@ repo = 'kana/vim-operator-replace'
 depends = ['vim-operator-user']
 hook_add = '''
 map <Space>r <Plug>(operator-replace)
+'''
+
+[[plugins]]
+repo = 'roxma/nvim-yarp'
+on_if  = '''
+!has('nvim')
+'''
+
+[[plugins]]
+repo = 'roxma/vim-hug-neovim-rpc'
+on_if  = '''
+!has('nvim')
 '''
