--- a/dein.toml
+++ b/dein.toml
@@ -27,8 +27,11 @@ let g:deoplete#enable_at_startup = 1
 # [[plugins]]
 # repo = 'tweekmonster/deoplete-clang2'
 
-# [[plugins]]
-# repo = 'Shougo/neomru.nvim'
+[[plugins]]
+repo = 'Shougo/neomru.vim'
+
+[[plugins]]
+repo = 'Shougo/neoyank.vim'
 
 [[plugins]]
 repo = 'Shougo/denite.nvim'
