--- a/dein.toml
+++ b/dein.toml
@@ -34,14 +34,22 @@ nnoremap <silent> <C-u>; :<C-u>Denite -resume -immediately -select=+1<CR>
 nnoremap <silent> <C-u>- :<C-u>Denite -resume -immediately -select=-1<CR>
 nnoremap <silent> <C-u><C-d> :<C-u>call denite#start([{'name': 'file_rec', 'args': ['~/dotfiles']}])<CR>
 nnoremap ml :<C-u>call denite#start([{'name': 'file_rec', 'args': [g:memolist_path]}])<CR>
-'''
-hook_post_source = '''
+
 call denite#custom#var('file_rec', 'command',
 \ ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '-g', ''])
 call denite#custom#var('grep', 'command',
 \ ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
 call denite#custom#var('grep', 'default_opts', [])
 call denite#custom#var('grep', 'recursive_opts', [])
+'''
+# not work
+hook_post_source = '''
+" call denite#custom#var('file_rec', 'command',
+" \ ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '-g', ''])
+" call denite#custom#var('grep', 'command',
+" \ ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
+" call denite#custom#var('grep', 'default_opts', [])
+" call denite#custom#var('grep', 'recursive_opts', [])
 '''
 
 [[plugins]]
@@ -166,3 +174,7 @@ hook_add = '''
     " Show reference of cousor word on quickfix
     nmap <silent> R :<C-u>exe("Gtags -r ".expand('<cword>'))<CR>
 '''
+
+[[plugins]]
+repo = "tpope/vim-fugitive"
+# hook_add = ''''''
