--- a/dein.toml
+++ b/dein.toml
@@ -7,11 +7,10 @@ build = 'make'
 
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
-on_if  = 'has('nvim')'
+if = 'has("python3")'
 hook_add = '''
 let g:deoplete#enable_at_startup = 1
 '''
-#let g:python3_host_prog = '/Library/Frameworks/Python.framework/Versions/3.6/bin/python3'
 
 # [[plugins]]
 # repo = 'zchee/deoplete-clang'
@@ -25,8 +24,9 @@ let g:deoplete#enable_at_startup = 1
 # [[plugins]]
 # repo = 'Valloric/YouCompleteMe'
 
-# [[plugins]]
-# repo = 'tweekmonster/deoplete-clang2'
+[[plugins]]
+repo = 'tweekmonster/deoplete-clang2'
+depends = 'deoplete.nvim'
 
 [[plugins]]
 repo = 'Shougo/neomru.vim'
@@ -34,6 +34,7 @@ repo = 'Shougo/neomru.vim'
 [[plugins]]
 repo = 'Shougo/denite.nvim'
 depends = 'neomru.vim'
+if = 'has("python3")'
 on_event = 'BufRead'
 hook_add = '''
 nnoremap <silent> <C-u><C-t> :<C-u>Denite filetype<CR>
