--- a/dein.toml
+++ b/dein.toml
@@ -38,6 +38,7 @@ hook_add = '''
 nnoremap <silent> <C-u><C-t> :<C-u>Denite filetype<CR>
 nnoremap <silent> <C-p> :<C-u>Denite file_rec<CR>
 nnoremap <silent> <C-b> :<C-u>Denite buffer<CR>
+nnoremap <silent> <Space>b :<C-u>Denite buffer<CR>
 nnoremap <silent> <C-u><C-j> :<C-u>Denite line<CR>
 nnoremap <silent> <C-u><C-g> :<C-u>Denite grep<CR>
 nnoremap <silent> <C-u><C-]> :<C-u>DeniteCursorWord grep<CR>
