--- a/dein.toml
+++ b/dein.toml
@@ -10,6 +10,22 @@ repo = 'Shougo/deoplete.nvim'
 if = 'has("python3")'
 hook_add = '''
 let g:deoplete#enable_at_startup = 1
+
+" <TAB>: completion.
+inoremap <silent><expr> <TAB>
+      \ pumvisible() ? "\<C-n>" :
+      \ <SID>check_back_space() ? "\<TAB>" :
+      \ deoplete#manual_complete()
+function! s:check_back_space() abort "{{{
+  let col = col('.') - 1
+  return !col || getline('.')[col - 1]  =~ '\s'
+endfunction"}}}
+
+" <S-TAB>: completion back.
+inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
+
+" <CR>: close popup and save indent.
+inoremap <expr><CR>  pumvisible() ? deoplete#close_popup() : "<CR>"
 '''
 
 # [[plugins]]
@@ -27,6 +43,11 @@ let g:deoplete#enable_at_startup = 1
 [[plugins]]
 repo = 'tweekmonster/deoplete-clang2'
 depends = 'deoplete.nvim'
+
+[[plugins]]
+repo = 'zchee/deoplete-jedi'
+on_event = 'InsertEnter'
+on_ft = 'python'
 
 [[plugins]]
 repo = 'Shougo/neomru.vim'
