--- a/dein.toml
+++ b/dein.toml
@@ -2,102 +2,6 @@
 repo = 'Shougo/dein.vim'
 
 [[plugins]]
-repo = 'Shougo/vimproc.vim'
-build = 'make'
-
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-if = 'has("python3")'
-hook_add = '''
-let g:deoplete#enable_at_startup = 1
-
-" <TAB>: completion.
-inoremap <silent><expr> <TAB>
-      \ pumvisible() ? "\<C-n>" :
-      \ <SID>check_back_space() ? "\<TAB>" :
-      \ deoplete#manual_complete()
-function! s:check_back_space() abort "{{{
-  let col = col('.') - 1
-  return !col || getline('.')[col - 1]  =~ '\s'
-endfunction"}}}
-
-" <S-TAB>: completion back.
-inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
-
-" <CR>: close popup and save indent.
-inoremap <expr><CR>  pumvisible() ? deoplete#close_popup() : "<CR>"
-'''
-
-# [[plugins]]
-# repo = 'zchee/deoplete-clang'
-# hook_source = '''
-# let g:deoplete#sources#clang#libclang_path = '/usr/local/Cellar/llvm/3.9.1/lib/libclang.dylib'
-# let g:deoplete#sources#clang#clang_header = '/usr/local/Cellar/llvm/3.9.1/lib/clang/'
-# '''
-# on_ft = ['c', 'cpp', 'cmake']
-# depends = ['deoplete.nvim']
-
-# [[plugins]]
-# repo = 'Valloric/YouCompleteMe'
-
-[[plugins]]
-repo = 'tweekmonster/deoplete-clang2'
-depends = 'deoplete.nvim'
-
-[[plugins]]
-repo = 'zchee/deoplete-jedi'
-on_event = 'InsertEnter'
-on_ft = 'python'
-
-[[plugins]]
-repo = 'Shougo/neomru.vim'
-
-[[plugins]]
-repo = 'Shougo/denite.nvim'
-depends = 'neomru.vim'
-if = 'has("python3")'
-on_event = 'BufRead'
-hook_add = '''
-nnoremap <silent> <C-u><C-t> :<C-u>Denite filetype<CR>
-nnoremap <silent> <C-p> :<C-u>Denite file_rec<CR>
-nnoremap <silent> <C-b> :<C-u>Denite buffer<CR>
-nnoremap <silent> <Space>b :<C-u>Denite buffer<CR>
-nnoremap <silent> <C-u><C-j> :<C-u>Denite line<CR>
-nnoremap <silent> <C-u><C-g> :<C-u>Denite grep<CR>
-nnoremap <silent> <C-u><C-]> :<C-u>DeniteCursorWord grep<CR>
-nnoremap <silent> <C-u><C-u> :<C-u>Denite file_mru<CR>
-nnoremap <silent> <C-u><C-y> :<C-u>Denite neoyank<CR>
-nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
-nnoremap <silent> <C-u>; :<C-u>Denite -resume -immediately -select=+1<CR>
-nnoremap <silent> <C-u>- :<C-u>Denite -resume -immediately -select=-1<CR>
-nnoremap <silent> <C-u><C-d> :<C-u>call denite#start([{'name': 'file_rec', 'args': ['~/dotfiles']}])<CR>
-nnoremap ml :<C-u>call denite#start([{'name': 'file_rec', 'args': [g:memolist_path]}])<CR>
-
-'''
-hook_post_source = '''
- call denite#custom#var('file_rec', 'command',
- \ ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '-g', ''])
- call denite#custom#var('grep', 'command',
- \ ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
- call denite#custom#var('grep', 'default_opts', [])
- call denite#custom#var('grep', 'recursive_opts', [])
-'''
-
-[[plugins]]
-repo = 'critiqjo/lldb.nvim'
-hook_add = '''
-    nmap <M-b> <Plug>LLBreakSwitch
-    vmap <F2> <Plug>LLStdInSelected
-    nnoremap <F4> :LLstdin<CR>
-    nnoremap <F5> :LLmode debug<CR>
-    nnoremap <S-F5> :LLmode code<CR>
-    nnoremap <F8> :LL continue<CR>
-    nnoremap <S-F8> :LL process interrupt<CR>
-    nnoremap <F9> :LL print <C-R>=expand('<cword>')<CR>
-    vnoremap <F9> :<C-U>LL print <C-R>=lldb#util#get_selection()<CR><CR>
-'''
-
-[[plugins]]
 repo = 'tomasr/molokai'
 hook_add = '''
 autocmd ColorScheme * highlight Comment ctermfg=40 guifg=#008800
@@ -105,9 +9,6 @@ autocmd ColorScheme * highlight Visual  ctermbg=236 guibg=grey22
 autocmd ColorScheme * hi CursorLine  cterm=NONE ctermbg=236 ctermfg=NONE guibg=grey17 guifg=NONE
 autocmd ColorScheme * hi Search cterm=NONE ctermfg=NONE ctermbg=243 guibg=midnightblue guifg=NONE
 '''
-
-[[plugins]]
-repo = 'cespare/vim-toml'
 
 [[plugins]]
 repo = 'osyo-manga/vim-precious'
@@ -142,9 +43,9 @@ nnoremap <C-h> :bp<CR>
 nnoremap <C-l> :bn<CR>
 " Smarter tab line有効化
 let g:airline#extensions#tabline#enabled = 1
-" powerline font入れないと若干ダサい
+" powerline font
 let g:airline_powerline_fonts = 1
-" vim-airline-themesが必要
+" vim-airline-themes
 let g:airline_theme='behelit'
 '''
 
