--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -61,7 +61,7 @@ hook_add = '''
 nnoremap <silent> <C-u><C-t> :<C-u>Denite filetype<CR>
 nnoremap <silent> <C-p> :<C-u>Denite file_rec<CR>
 nnoremap <silent> <C-b> :<C-u>Denite buffer<CR>
-nnoremap <silent> sb :<C-u>Denite buffer<CR>
+nnoremap <silent> sb :<C-u>Denite buffer/project<CR>
 nnoremap <silent> <C-u><C-j> :<C-u>Denite line<CR>
 nnoremap <silent> <C-u><C-g> :<C-u>Denite grep<CR>
 nnoremap <silent> <C-u><C-]> :<C-u>DeniteCursorWord grep<CR>
@@ -72,7 +72,17 @@ nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
 " nnoremap <silent> <C-u>- :<C-u>Denite -resume -immediately -select=-1<CR>
 " nnoremap <silent> <C-u><C-d> :<C-u>call denite#start([{'name': 'file_rec', 'args': ['~/dotfiles']}])<CR>
 " nnoremap ml :<C-u>call denite#start([{'name': 'file_rec', 'args': [g:memolist_path]}])<CR>
-
+ nnoremap <silent> / :<C-u>Denite -buffer-name=search -auto-highlight
+        \ line<CR>
+ nnoremap <silent> * :<C-u>DeniteCursorWord -buffer-name=search
+        \ -auto-highlight -mode=normal line<CR>
+ nnoremap <silent> ;g :<C-u>Denite -buffer-name=search
+        \ -no-empty -mode=normal grep<CR>
+ nnoremap <silent> n :<C-u>Denite -buffer-name=search
+        \ -resume -mode=normal -refresh<CR>
+ nnoremap <silent> ;;
+        \ :<C-u>Denite command command_history<CR>
+ " nnoremap <silent> <C-k> :<C-u>Denite -mode=normal change jump<CR>
 '''
 hook_post_source = '''
  call denite#custom#var('file_rec', 'command',
@@ -81,6 +91,16 @@ hook_post_source = '''
  \ ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
  call denite#custom#var('grep', 'default_opts', [])
  call denite#custom#var('grep', 'recursive_opts', [])
+ call denite#custom#alias('source', 'file_rec/git', 'file_rec')
+ call denite#custom#var('file_rec/git', 'command',
+     \ ['git', 'ls-files', '-co', '--exclude-standard'])
+ call denite#custom#source(
+     \ 'file_mru', 'matchers', ['matcher_fuzzy', 'matcher_project_files'])
+ call denite#custom#source('file_old', 'matchers',
+      \ ['matcher_fuzzy', 'matcher_project_files'])
+ call denite#custom#alias('source', 'buffer/project', 'buffer')
+ call denite#custom#source('buffer/project', 'matchers',
+      \ ['matcher_fuzzy', 'matcher_project_files'])
 '''
 
 [[plugins]]
@@ -127,3 +147,5 @@ on_source = ['denite.nvim']
 # repo = "huawenyu/neogdb.vim"
 # on_ft = ['c', 'cpp']
 
+[[plugins]]
+repo = 'equalsraf/neovim-gui-shim'
