--- a/dein.toml
+++ b/dein.toml
@@ -43,10 +43,10 @@ repo = 'vim-airline/vim-airline'
 depends = ['vim-airline-themes']
 hook_add = '''
 " カーソルキーでbuffer移動
-nnoremap <Left> :bp<CR>
-nnoremap <Right> :bn<CR>
-nnoremap <C-h> :bp<CR>
-nnoremap <C-l> :bn<CR>
+" nnoremap <Left> :bp<CR>
+" nnoremap <Right> :bn<CR>
+" nnoremap <C-h> :bp<CR>
+" nnoremap <C-l> :bn<CR>
 " Smarter tab line有効化
 let g:airline#extensions#tabline#enabled = 1
 " powerline font
