add quickfix window setting for vim-fugitive

--- a/dein.toml
+++ b/dein.toml
@@ -120,6 +120,9 @@ hook_add = '''
 
 [[plugins]]
 repo = "tpope/vim-fugitive"
+hook_add = '''
+autocmd QuickFixCmdPost *grep* cwindow
+'''
 
 [[plugins]]
 repo = "chrismccord/bclose.vim"
