add keymap add plugin

--- a/dein.toml
+++ b/dein.toml
@@ -161,3 +161,6 @@ let g:netrw_nogx = 1 " disable netrw's gx mapping.
 nmap gx <Plug>(openbrowser-smart-search)
 vmap gx <Plug>(openbrowser-smart-search)
 '''
+
+[[plugins]]
+repo = 'skywind3000/asyncrun.vim'
