--- a/dein.toml
+++ b/dein.toml
@@ -53,6 +53,9 @@ let g:airline#extensions#tabline#enabled = 1
 let g:airline_powerline_fonts = 1
 " vim-airline-themes
 let g:airline_theme='behelit'
+" AsyncRun
+" let g:asyncrun_status = ''
+" let g:airline_section_error = airline#section#create_right(['%{g:asyncrun_status}'])
 '''
 
 [[plugins]]
@@ -164,6 +167,10 @@ vmap gx <Plug>(openbrowser-smart-search)
 
 [[plugins]]
 repo = 'skywind3000/asyncrun.vim'
+hook_add = '''
+let g:asyncrun_open = 6
+let g:asyncrun_trim = 1
+'''
 
 # [[plugins]]
 # repo = 'tpope/vim-dispatch'
