--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -94,6 +94,8 @@ nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
 hook_post_source = '''
  call denite#custom#var('file_rec', 'command',
  \ ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '-g', ''])
+ call denite#custom#source('file/rec', 'matchers',
+ \ ['matcher/fruzzy'])
  call denite#custom#var('grep', 'command',
  \ ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
  call denite#custom#var('grep', 'default_opts', [])
@@ -102,12 +104,12 @@ hook_post_source = '''
  call denite#custom#var('file_rec/git', 'command',
      \ ['git', 'ls-files', '-co', '--exclude-standard'])
  call denite#custom#source(
-     \ 'file_mru', 'matchers', ['matcher_fuzzy', 'matcher_project_files'])
+     \ 'file_mru', 'matchers', ['matcher/fruzzy', 'matcher_project_files'])
  call denite#custom#source('file_old', 'matchers',
-      \ ['matcher_fuzzy', 'matcher_project_files'])
+      \ ['matcher/fruzzy', 'matcher_project_files'])
  call denite#custom#alias('source', 'buffer/project', 'buffer')
  call denite#custom#source('buffer/project', 'matchers',
-      \ ['matcher_fuzzy', 'matcher_project_files'])
+      \ ['matcher/fruzzy', 'matcher_project_files'])
 '''
 
 [[plugins]]
@@ -154,8 +156,8 @@ on_source = ['denite.nvim']
 # repo = "huawenyu/neogdb.vim"
 # on_ft = ['c', 'cpp']
 
-# [[plugins]]
-# repo = 'equalsraf/neovim-gui-shim'
+[[plugins]]
+repo = 'equalsraf/neovim-gui-shim'
 
 [[plugins]]
 repo = 'plasticboy/vim-markdown'
@@ -171,3 +173,15 @@ on_ft = ['markdown']
 hook_add = '''
 let g:table_mode_corner="|"
 '''
+
+# [[plugins]]
+# repo = 'Shougo/neoinclude.vim'
+
+[[plugins]]
+repo = 'raghur/fruzzy'
+on_source = ['denite.nvim']
+hook_source = '''
+let g:fruzzy#sortonempty = 0
+'''
+hook_post_update = 'call fruzzy#install()'
+
