--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -113,8 +113,8 @@ nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
 '''
 hook_post_source = '''
  call denite#custom#var('file_rec', 'command',
- \ ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '-g', ''])
- call denite#custom#source('file/rec', 'matchers',
+ \ ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', (has('win32') ? '-g:' : '-g='), ''])
+ call denite#custom#source('file_rec', 'matchers',
  \ ['matcher/fruzzy'])
  call denite#custom#var('grep', 'command',
  \ ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
