--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -6,7 +6,6 @@
 repo = 'Shougo/deoplete.nvim'
 if = 'has("python3")'
 on_event = 'InsertEnter'
-depends = ['pyinstall.nvim']
 hook_add = '''
 let g:deoplete#enable_at_startup = 1
 
@@ -78,7 +77,7 @@ repo = 'Shougo/neomru.vim'
 
 [[plugins]]
 repo = 'Shougo/denite.nvim'
-depends = ['neomru.vim', 'pyinstall.nvim']
+depends = ['neomru.vim']
 if = 'has("python3")'
 on_cmd = 'Denite'
 hook_add = '''
