--- a/dein.toml
+++ b/dein.toml
@@ -181,3 +181,25 @@ repo = 'junegunn/vim-easy-align'
 hook_add = '''
 xmap ga <Plug>(EasyAlign)
 '''
+
+[[plugins]]
+repo = 'haya14busa/vim-easymotion'
+hook_add = '''
+let g:EasyMotion_do_mapping = 0
+let g:EasyMotion_smartcase = 1
+let g:EasyMotion_use_upper = 1
+nmap ss <Plug>(easymotion-s2)
+nmap f <Plug>(easymotion-lineanywhere)
+vmap f <Plug>(easymotion-lineanywhere)
+let g:EasyMotion_re_line_anywhere = '\v' .
+    \       '(<.|^$)' . '|' .
+    \       '(.>|^$)' . '|' .
+    \       '(\l)\zs(\u)' . '|' .
+    \       '(_\zs.)' . '|' .
+    \       '(#\zs.)' . '|' .
+    \       '\|'
+nmap sj <Plug>(easymotion-bd-jk)
+" let g:EasyMotion_keys = 'fjdksla;yuitreopwqvbncmxzFJDKSLA;YUITREOPWQVBNCMXZ'
+let g:EasyMotion_keys = 'FJDKSLA;YUITREOPWQVBNCMXZ'
+let g:EasyMotion_startofline = 0
+'''
