--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -112,14 +112,19 @@ nnoremap <silent> <C-u><C-r> :<C-u>Denite -resume<CR>
  " nnoremap <silent> <C-k> :<C-u>Denite -mode=normal change jump<CR>
 '''
 hook_post_source = '''
- call denite#custom#var('file_rec', 'command',
- \ ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '--ignore=.git/*', (has('win32') ? '-g:' : '-g='), ''])
+ if executable('pt')
+   call denite#custom#var('file_rec', 'command',
+  \ ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '--ignore=.git/*', (has('win32') ? '-g:' : '-g='), ''])
+   call denite#custom#var('grep', 'command',
+  \ ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
+   call denite#custom#var('grep', 'default_opts', [])
+   call denite#custom#var('grep', 'recursive_opts', [])
+ else
+   call denite#custom#var('file/rec', 'command', ['scantree.py'])
+ endif
+
  call denite#custom#source('file_rec', 'matchers',
  \ ['matcher/fruzzy'])
- call denite#custom#var('grep', 'command',
- \ ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
- call denite#custom#var('grep', 'default_opts', [])
- call denite#custom#var('grep', 'recursive_opts', [])
  call denite#custom#alias('source', 'file_rec/git', 'file_rec')
  call denite#custom#var('file_rec/git', 'command',
      \ ['git', 'ls-files', '-co', '--exclude-standard'])
